[package]
name = "my_app"
version = "0.1.0"
authors = ["Paul Shen <paulshen0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = { version = "0.8.0", path = "../eframe", features = ["time"] }
egui = { version = "0.8.0", path = "../egui" }
syntect = { version = "4", default_features = false, features = ["default-fancy"], optional = true }

serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

wasm-bindgen = { version = "0.2", features = ["nightly", "serde-serialize"] }
web-sys = "0.3"
egui_web = { version = "0.8.0", path = "../egui_web" }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"

[features]
default = ["syntect"]
http = ["eframe/http"]
persistence = ["eframe/persistence"]

[profile.release]
opt-level = 2
