[package]
name = "tictactoe"
version = "0.1.0"
authors = ["Paul Shen <paulshen0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = { version = "0.7.0", path = "../eframe", features = ["time"] }

serde = { version = "1", features = ["derive"], optional = true }

[features]
default = ["persistence"]
http = ["eframe/http"]
persistence = ["eframe/persistence", "serde"]
